hotfix: Fix bleeding buttons (remove slide in efx)

--- a/source/sass/component/_button.scss
+++ b/source/sass/component/_button.scss
@@ -10,6 +10,7 @@
     background-color: transparent;
     border: none;
     user-select: none;
+    position: relative;
 
     &__label {
         display: flex;
@@ -64,7 +65,6 @@
         transition: opacity 100ms ease-in-out, 
                     transform 150ms ease-in-out, 
                     background-color 100ms ease-in-out;
-        transform: translateX(-100%); 
     }
 
     &.c-button--icon-only {
@@ -153,7 +153,6 @@
         @include shadow(2);
 
         &:after {
-            transform: translateX(0%); 
             background: $color-white;
             opacity: .24;
         }
@@ -221,10 +220,6 @@
             background: $color-button-default-text;
             opacity: .24;
         }
-    }
-
-    &:hover:after {
-        transform: translateX(0%); 
     }
     
     &:hover:focus {
